Added search in browse, attempted CSS

--- a/app/assets/javascripts/browse/browse.js.erb
+++ b/app/assets/javascripts/browse/browse.js.erb
@@ -2,7 +2,27 @@ app.controller(
 	'BrowseCtrl', [
 		'$scope',
 		function($scope) {
+			//variables
 			$scope.test = "Hello World! This is the Angular welcome to the Browse page!"
+			$scope.SCHOOLS = [
+				{id: 0, name: "Windermere Secondary School", reviews: ["The teachers are inspiring", "The school is donut shaped"]},
+				{id: 1, name: "Vancouver Technical Secondary School", reviews: ["It's on a hill", "Sometimes I get lost"]},
+				{id: 2, name: "Cambie Secondary School", reviews: ["It's a pretty building", "Sometimes my kid goes to IKEA for lunch"]}
+			];
+			$scope.searchResults = $scope.SCHOOLS;
+			//functions
+			$scope.loadSchoolInfo = function(id) {
+				$scope.schoolReviews = $scope.SCHOOLS[id].reviews;
+			}
+			$scope.schoolSearch = function() {
+				$scope.searchResults = [];
+				var len = $scope.SCHOOLS.length;
+				for (var k = 0; k < len; k++) {
+					if ($scope.SCHOOLS[k].name.toLowerCase().indexOf($scope.searchQuery) != -1) {
+						$scope.searchResults.push($scope.SCHOOLS[k]);
+					}
+				}
+			}
 		}
 	]
 );
