--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,12 @@
 
 <body ng-app="skoolr">
 <h1>Skoolr</h1>
-<span> 
-	<%= link_to "Home", '/home' %> | 
-	<%= link_to "Get Started", '/search' %> |
-	<%= link_to "Browse Schools", '/browse' %> |
-	<%= link_to "Login/Signup", '/login' %> |
-	<%= link_to "Admin", '/admin' %>
+<span class="tabs"> 
+	<span class="tab"><%= link_to "Home", '/home' %> </span>
+	<span class="tab"><%= link_to "Get Started", '/search' %> </span>
+	<span class="tab"><%= link_to "Browse Schools", '/browse' %> </span>
+	<span class="tab"><%= link_to "Login/Signup", '/login' %> </span>
+	<span class="tab"><%= link_to "Admin", '/admin' %></span>
 </span>
 <br/><br/>
 <%= yield %>
