--- a/app/views/pages/browse.html.erb
+++ b/app/views/pages/browse.html.erb
@@ -1,4 +1,15 @@
 <div ng-controller="BrowseCtrl">
 	This is the browse page. <br/>
-	{{test}}
+	<form ng-submit="schoolSearch()"><input ng-model="searchQuery"></input></form><br/>
+	<select size="2">
+		<option ng-repeat="school in searchResults | orderBy: 'name'" ng-click="loadSchoolInfo(school.id)">
+			{{school.name}} 
+		</option>
+	</select><br/>
+	<span ng-hide="!schoolReviews">
+		Reviews:<br/>
+	</span>
+	<span ng-repeat="review in schoolReviews">
+		{{review}}<br/>
+	</span>
 </div>
