Added creating and editing of schools

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <span> 
 	<%= link_to "Home", '/home' %> | 
 	<%= link_to "Get Started", '/search' %> |
-	<%= link_to "Browse Schools", '/browse' %> |
+	<%= link_to "Browse Schools", controller: 'schools' %> |
 	<%= link_to "Login/Signup", '/login' %> |
 	<%= link_to "Admin", '/admin' %>
 </span>
