--- a/app/views/schools/index.erb
+++ b/app/views/schools/index.erb
@@ -5,8 +5,13 @@
     <th>School name</th>
   </tr>
   <% @schools.each do |school| %>
-  <tr>
-    <td><%= school.name %></td>
-  </tr>
+      <tr>
+        <td><%= school.name %></td>
+        <td><%= link_to "Show", school_path(school) %></td>
+        <td><%= link_to "Edit", edit_school_path(school) %></td>
+        <td><%= link_to 'Destroy', school_path(school),
+                        method: :delete,
+                        data: { confirm: 'Are you sure?' } %></td>
+      </tr>
   <% end %>
 </table>
