--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -10,10 +10,18 @@
 	font-size: 24px;
 }
 
-.height-640 {
-	height: 640px;
+.height-80vh {
+	padding: 12px 12px;
+	margin: 12px 0;
+	height: 80vh;
 }
 
-.width-100p{
+.width-100p {
 	width: 100%;
+}
+
+#googleMap {
+	float: right;
+	width: 40%;
+	padding-top: 40%;
 }
