--- a/app/views/pages/browse.html.erb
+++ b/app/views/pages/browse.html.erb
@@ -1,21 +1,20 @@
-<div ng-controller="BrowseCtrl">
-	This is the browse page. <br/>
-	<div class="height-640 boxed col-md-6">
-		<form ng-submit="schoolSearch()"><input class="width-100p" ng-model="searchQuery"></input></form><br/>
-		<select class="width-100p" style="height:90%;" size="2">
+<div ng-controller="BrowseCtrl" ng-init="
+	<% @schools.each_with_index do |school, i| %>
+		SCHOOLS.push({id: <%= i%>, name: '<%=school.name%>', address: '<%=school.address%>'});
+	<% end %>">
+	<div class="height-80vh boxed col-md-6">
+		<form><input class="font-24 width-100p" ng-change="schoolSearch()" ng-model="searchQuery" placeholder="Search"></input></form><br/>
+		<select class="font-24 width-100p" style="height:90%;" size="2">
 			<option ng-repeat="school in searchResults | orderBy: 'name'" ng-click="loadSchoolInfo(school.id)">
-				{{school.name}} 
+				{{school.name}}
 			</option>
 		</select>
 	</div>
-	<div class="height-640 boxed col-md-6">
-		<span ng-hide="!schoolReviews">
-			<button style="float:right;">Edit</button>
-			<h3> {{schoolName}}</h3>
-			Reviews:<br/>
-		</span>
-		<span ng-repeat="review in schoolReviews">
-			{{review}}<br/>
+	<div class="height-80vh boxed col-md-6">
+		<span ng-show="schoolName">
+			<h2> {{schoolName}}</h2>
+			<strong>Address:</strong> <br/> {{schoolAddress}}<br/>
+			<div id="googleMap"></div>
 		</span>
 	</div>
 </div>
