--- a/app/views/schools/index.erb
+++ b/app/views/schools/index.erb
@@ -1,12 +1,25 @@
 <h1>Edit Schools</h1>
 
-<table>
-  <tr>
-    <th>School name</th>
-  </tr>
+<div class="media">
+  <div class="media-body">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>School Name</th>
+          <th>Address</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
   <% @schools.each do |school| %>
       <tr>
         <td><%= school.name %></td>
+        <td><%= school.address %></td>
         <td><%= link_to "Show", school_path(school) %></td>
         <td><%= link_to "Edit", edit_school_path(school) %></td>
         <td><%= link_to 'Destroy', school_path(school),
@@ -14,4 +27,17 @@
                         data: { confirm: 'Are you sure?' } %></td>
       </tr>
   <% end %>
+</tbody>
 </table>
+</div>
+</div>
+
+<br>
+
+<h3> Import Schools</h3>
+
+  <%= form_tag import_schools_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Upload Schools" %>
+<% end %>
+
