--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,8 +1,9 @@
 <div ng-controller="AdminCtrl">
 	<%= link_to 'Add School', new_school_path %><br>
-  <%= link_to 'Edit School', controller: 'schools'%>
-  <%= form_tag import_schools_path, multipart: true do %>
-      <%= file_field_tag :file %>
-      <%= submit_tag "Import" %>
-  <% end %>
+  <%= link_to 'Edit School', controller: 'schools'%><br>
 </div>
+<p>Import from file</p>
+<%= form_tag import_schools_path, multipart: true do %>
+<%= file_field_tag :file %>
+<%= submit_tag "Import" %>
+<% end %>
