Added fetching data from Vancouver server

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -7,3 +7,5 @@
 <%= file_field_tag :file %>
 <%= submit_tag "Import" %>
 <% end %>
+<p>Update from server</p>
+<%= button_to 'Update', fetch_schools_path %>
