--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,4 +1,5 @@
 <div ng-controller="AdminCtrl">
+	<h1> Control Panel </h1>
 	<%= link_to 'Add School', new_school_path %><br>
   <%= link_to 'Edit School', controller: 'schools'%><br>
 </div>
@@ -7,5 +8,5 @@
 <%= file_field_tag :file %>
 <%= submit_tag "Import" %>
 <% end %> -->
-<p>Update from server</p>
+<h2>Update from server</h2>
 <%= button_to 'Update', fetch_schools_path %>
