--- a/app/views/schools/show.erb
+++ b/app/views/schools/show.erb
@@ -4,3 +4,39 @@
 <p>
   <%= @school.address %>
 </p>
+<h2>Grades</h2>
+<% @school.grades.each do |grade| %>
+  <p>
+    <strong>Subject</strong>
+    <%= grade.subject %>
+  </p>
+ 
+  <p>
+    <strong>Grade</strong>
+    <%= grade.grade %>
+  </p>
+  
+  <p>
+    <strong>Average mark</strong>
+    <%= grade.average_mark %>
+  </p>
+<% end %>
+
+<h2>Add grade:</h2>
+<%= form_for([@school, @school.grades.build]) do |f| %>
+  <p>
+    <%= f.label :Subject %><br>
+    <%= f.text_field :subject %>
+  </p>
+  <p>
+    <%= f.label :Grade %><br>
+    <%= f.text_area :grade %>
+  </p>
+  <p>
+    <%= f.label :Average_mark %><br>
+    <%= f.text_area :average_mark %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
