--- a/app/views/schools/show.erb
+++ b/app/views/schools/show.erb
@@ -20,23 +20,10 @@
     <strong>Average mark</strong>
     <%= grade.average_mark %>
   </p>
-<% end %>
-
-<h2>Add grade:</h2>
-<%= form_for([@school, @school.grades.build]) do |f| %>
+  
   <p>
-    <%= f.label :Subject %><br>
-    <%= f.text_field :subject %>
-  </p>
-  <p>
-    <%= f.label :Grade %><br>
-    <%= f.text_area :grade %>
-  </p>
-  <p>
-    <%= f.label :Average_mark %><br>
-    <%= f.text_area :average_mark %>
-  </p>
-  <p>
-    <%= f.submit %>
+    <%= link_to 'Destroy Grade', [grade.school, grade],
+               method: :delete,
+               data: { confirm: 'Are you sure?' } %>
   </p>
 <% end %>
