Changed grades to be displayed in a graph

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -20,6 +20,13 @@
 	width: 100%;
 }
 
+.graph{
+	background-color: #6699cc;
+	text-align: right;
+	margin: 1px;
+	color: white;
+}
+
 #googleMap {
 	float: right;
 	width: 40%;
