Installed devise and created User model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Home", '/home' %> </span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Get Started", '/search' %> </span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Browse Schools", '/browse' %> </span>
-	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Login/Signup", '/login' %> </span>
+	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Login/Signup", new_user_session_path %> </span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Admin", '/admin' %></span>
 </span>
 <br/><br/>
