Improved the ui of the admin panel and did some styling work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Get Started", '/search' %> </span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Browse Schools", '/browse' %> </span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Login/Signup", '/login' %> </span>
-	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Admin", '/admin' %></span>
+	<span class="boxed font-24 col-md-2 text-center"><%= link_to 'Admin', '/admin'%><br></span>
 </span>
 <br/><br/>
 <div class="boxed col-md-12">
