--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1,5 +1,27 @@
+body {
+	background: -webkit-linear-gradient(right, #B2DEED, #D8EAF0);
+	background: -o-gradient(right, #B2DEED, #D8EAF0);
+	background: -moz-gradient(right, #B2DEED, #D8EAF0);
+	background: linear-gradient(to right, #B2DEED, #D8EAF0);
+}
+
+div .boxed {
+	background-color: white;
+}
+
+span .boxed {
+}
+
+h1 {
+	color: white;
+	font-style: oblique;
+	font-weight: bold;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 .boxed {
 	border: solid;
+	background-color: white;
 }
 
 .boxed a {
@@ -20,11 +42,22 @@
 	width: 100%;
 }
 
-.graph{
+.graph {
 	background-color: #6699cc;
 	text-align: right;
 	margin: 1px;
 	color: white;
+}
+
+.scroll-table {
+	height: 70vh;
+	overflow: auto;
+}
+
+.button-row  form {
+	float: left;
+	width: auto;
+	margin: 0 6px 0 0;
 }
 
 #googleMap {
