--- a/app/views/schools/index.erb
+++ b/app/views/schools/index.erb
@@ -1,6 +1,9 @@
-<h1>Edit Schools</h1>
-
-<div class="media">
+<h2>Manage Schools</h2>
+<div class="button-row">
+	<%= button_to "Update From Server", fetch_schools_path, class: "btn btn-primary" %>
+	<%= button_to "Add School", new_school_path, class: "btn btn-primary" %>
+</div><br/>
+<div class="media scroll-table">
   <div class="media-body">
     <table class="table table-hover">
       <thead>
@@ -15,19 +18,20 @@
         </tr>
       </thead>
 
-      <tbody>
-  <% @schools.each do |school| %>
-      <tr>
-        <td><%= school.name %></td>
-        <td><%= school.address %></td>
-        <td><%= link_to "Show", school_path(school) %></td>
-        <td><%= link_to "Edit", edit_school_path(school) %></td>
-        <td><%= link_to 'Destroy', school_path(school),
-                        method: :delete,
-                        data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-  <% end %>
-</tbody>
+	<tbody>
+	  <% @schools.each do |school| %>
+	  <tr>
+		<td><%= link_to "", school_path(school), class: "glyphicon glyphicon-search" %> <%= school.name %></td>
+		<td><%= school.address %></td>
+		<td><%= link_to "", edit_school_path(school), class: "glyphicon glyphicon-pencil" %></td>
+		<td></td>
+		<td><%= link_to "", school_path(school),
+				method: :delete,
+				data: { confirm: "Are you sure?" },
+				class: "glyphicon glyphicon-trash" %></td>
+	  </tr>
+	  <% end %>
+	</tbody>
 </table>
 </div>
 </div>
