Added admin and rearranged login screens

--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,4 +1,5 @@
-<div ng-controller="LoginCtrl">
-	This is the login/signup page. <br/>
-	{{test}}
-</div>
+<!--<div ng-controller="LoginCtrl">-->
+
+<!--</div>-->
+<%= button_to "User login", new_user_session_path %>
+<%= button_to "Admin login", new_admin_session_path %>
