--- a/app/views/schools/edit.erb
+++ b/app/views/schools/edit.erb
@@ -1,22 +1,7 @@
 <h1>Edit school</h1>
 
-<%= render 'form' %>
+<%= render 'schools/form' %>
 
 <h2>Add grade:</h2>
-<%= form_for([@school, @school.grades.build]) do |f| %>
-  <p>
-    <%= f.label :Subject %><br>
-    <%= f.text_field :subject %>
-  </p>
-  <p>
-    <%= f.label :Grade %><br>
-    <%= f.text_area :grade %>
-  </p>
-  <p>
-    <%= f.label :Average_mark %><br>
-    <%= f.text_area :average_mark %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+
+<%= render 'grades/form' %>
