Changed grade field from text_field to number_field

--- a/app/views/grades/_form.erb
+++ b/app/views/grades/_form.erb
@@ -18,11 +18,11 @@
   </p>
   <p>
     <%= f.label :Grade %><br>
-    <%= f.text_field :grade %>
+    <%= f.number_field :grade %>
   </p>
   <p>
     <%= f.label :Average_mark %><br>
-    <%= f.text_field :average_mark %>
+    <%= f.number_field :average_mark %>
   </p>
   <p>
     <%= f.submit %>
