Removed some fields from survey table

--- a/app/views/pages/browse.html.erb
+++ b/app/views/pages/browse.html.erb
@@ -5,7 +5,7 @@
 			GRADES.push({id: <%= i%>, subject: '<%=grade.subject%>', grade: '<%=grade.grade%>', average_mark: '<%=grade.average_mark%>', school_id: '<%=grade.school_id%>'});
 		<% end %>
 		<% school.surveys.each_with_index do |survey, i| %>
-			SURVEYS.push({id: <%= i%>, school_year: '<%=survey.school_year%>', question: '<%=survey.question%>', grade_group: '<%=survey.grade_group%>', non_excluded_responses: '<%=survey.non_excluded_responses%>', many_or_all_responses: '<%=survey.many_or_all_responses%>', many_or_all_pct: '<%=survey.many_or_all_pct%>', at_no_time_responses: '<%=survey.at_no_time_responses%>', at_no_time_pct: '<%=survey.at_no_time_pct%>', few_times_responses: '<%=survey.few_times_responses%>', few_times_pct: '<%=survey.few_times_pct%>', some_times_responses: '<%=survey.some_times_responses%>', some_times_pct: '<%=survey.some_times_pct%>', school_id: '<%=survey.school_id%>'});
+			SURVEYS.push({id: <%= i%>, question: '<%=survey.question%>', non_excluded_responses: '<%=survey.non_excluded_responses%>', many_or_all_responses: '<%=survey.many_or_all_responses%>', at_no_time_responses: '<%=survey.at_no_time_responses%>', few_times_responses: '<%=survey.few_times_responses%>', some_times_responses: '<%=survey.some_times_responses%>', school_id: '<%=survey.school_id%>'});
 		<% end %>
 	<% end %>
 	">
@@ -27,7 +27,7 @@
 			</div>
 			<br/><strong>Surveys:</strong> <br/> 
 			<option ng-repeat="survey in schoolSurveys">
-				{{survey.school_year}}, {{survey.question}}, {{survey.grade_group}}, {{survey.non_excluded_responses}}, {{survey.many_or_all_responses}}, {{survey.many_or_all_pct}}, {{survey.at_no_time_responses}}, {{survey.at_no_time_pct}}, {{survey.few_times_responses}}, {{survey.few_times_pct}}, {{survey.some_times_responses}}, {{survey.some_times_pct}}
+				{{survey.question}}, {{survey.non_excluded_responses}}, {{survey.many_or_all_responses}}, {{survey.at_no_time_responses}}, {{survey.few_times_responses}}, {{survey.some_times_responses}}
 			</option>
 			<div id="googleMap"></div>
 		</span>
