--- a/app/views/schools/index.erb
+++ b/app/views/schools/index.erb
@@ -3,7 +3,7 @@
 	<%= button_to "Update From Server", fetch_schools_path, class: "btn btn-primary" %>
 	<%= button_to "Add School", new_school_path, class: "btn btn-primary" %>
 </div><br/>
-<div class="media scroll-table">
+<div class="media scroll-table height-70vh">
   <div class="media-body">
     <table class="table table-hover">
       <thead>
