Fixed some merge artifacts

--- a/app/views/browse/_show.html.erb
+++ b/app/views/browse/_show.html.erb
@@ -6,10 +6,10 @@
 <% end %>
 <br/><strong>Surveys:</strong> <br/> 
 <% @school.surveys.each do |survey| %>
-	<%= survey.school_year %>, <%= survey.question %>
+	<%= survey.question %>
 <% end %>
 <option ng-repeat="survey in schoolSurveys">
-	{{survey.school_year}}, {{survey.question}}, {{survey.grade_group}}, {{survey.non_excluded_responses}}, {{survey.many_or_all_responses}}, {{survey.many_or_all_pct}}, {{survey.at_no_time_responses}}, {{survey.at_no_time_pct}}, {{survey.few_times_responses}}, {{survey.few_times_pct}}, {{survey.some_times_responses}}, {{survey.some_times_pct}}
+	{{survey.question}}, {{survey.non_excluded_responses}}, {{survey.many_or_all_responses}}, {{survey.at_no_time_responses}}, {{survey.few_times_responses}}, {{survey.some_times_responses}}
 </option>
 <button onclick="generateMap('<%= @school.address %>')">load</button>
 <div id="googleMap"></div>
