Copied Browse over to Search

--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -25,13 +25,15 @@
 		</span>
 	</div>
 	-->
-	<div class="height-80vh boxed col-md-6 scroll-table">
-		<%= form_tag(browse_index_path, :method => "get") do %>
-			<%= text_field_tag :search, params[:search], placeholder: "Search", class: "font-24 width-100p" %>
-		<% end %>
-		<% @schools.sort_by {|h| h[:name]}.each do |school| %>
-			<%= link_to school.name, browse_path(school), :onclick => "generateMap('3139 East29th Avenue')", class: "font-24 width-100p btn btn-default", style: "text-align:left;" %>
-		<% end %>
+	<div class="height-80vh boxed col-md-6">
+			<%= form_tag(browse_index_path, :method => "get") do %>
+				<%= text_field_tag :search, params[:search], placeholder: "Search", class: "font-24 width-100p" %>
+			<% end %>
+		<div class="scroll-table" style="height:72vh;">
+			<% @schools.sort_by {|h| h[:name]}.each do |school| %>
+				<%= link_to school.name, browse_path(school), :onclick => "generateMap('3139 East29th Avenue')", class: "font-24 width-100p btn btn-default", style: "text-align:left;" %>
+			<% end %>
+		</div>
 	</div>
 	
 	<div class="height-80vh boxed col-md-6">
