--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Browse Schools", '/browse' %> </span>
 
   <% if user_signed_in? && !admin_signed_in? %>
-      <span class="boxed font-24 col-md-2 text-center"><%= link_to "Profile", edit_user_registration_path %></span>
+      <span class="boxed font-24 col-md-2 text-center"><%= link_to "Profile", '/profile' %></span>
         <span class="boxed font-24 col-md-2 text-center">
           <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
         </span>
