Added basic distance search

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -10,7 +10,7 @@
 		</div>
 	</div>
 	
-	<div class="height-80vh boxed col-md-6">
+	<div class="height-80vh boxed col-md-6 scroll-table">
 		<% if !current_page?(:controller => "search") %>
 			<%= render partial: "show" %>
 		<% end %>
