--- a/app/views/search/_show.html.erb
+++ b/app/views/search/_show.html.erb
@@ -8,6 +8,12 @@
 <% @school.surveys.each do |survey| %>
 	<%= survey.question %>
 <% end %>
+<%= @school.distance_to(params[:search]) %><br/>
+<% @school.nearbys(10).each do |nearby| %>
+	<% if nearby.distance_to(@school.address) < 5 %>
+	<%= nearby.address %> <%= nearby.distance_to(@school.address) %><br/>
+	<% end %>
+<% end %>
 <!--
 <option ng-repeat="survey in schoolSurveys">
 	{{survey.question}}, {{survey.non_excluded_responses}}, {{survey.many_or_all_responses}}, {{survey.at_no_time_responses}}, {{survey.few_times_responses}}, {{survey.some_times_responses}}
