--- a/app/views/search/_show.html.erb
+++ b/app/views/search/_show.html.erb
@@ -14,9 +14,5 @@
 	<%= nearby.address %> <%= nearby.distance_to(@school.address) %><br/>
 	<% end %>
 <% end %>
-<!--
-<option ng-repeat="survey in schoolSurveys">
-	{{survey.question}}, {{survey.non_excluded_responses}}, {{survey.many_or_all_responses}}, {{survey.at_no_time_responses}}, {{survey.few_times_responses}}, {{survey.some_times_responses}}
-</option>-->
-<button onclick="generateMap('<%= @school.address %>')">load</button>
+<script>generateMap('<%= @school.address %>')</script>
 <div id="googleMap"></div>
