--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,7 +5,7 @@
 			<% end %>
 		<div class="scroll-table" style="height:72vh;">
 			<% @schools.sort_by {|h| h[:name]}.each do |school| %>
-				<%= link_to school.name, search_path(school), :onclick => "generateMap('3139 East29th Avenue')", class: "font-24 width-100p btn btn-default", style: "text-align:left;" %>
+				<%= link_to school.name, search_path(school), class: "font-24 width-100p btn btn-default", style: "text-align:left;" %>
 			<% end %>
 		</div>
 	</div>
