Added scrollbar for browse right panel

--- a/app/views/browse/_show.html.erb
+++ b/app/views/browse/_show.html.erb
@@ -21,7 +21,7 @@ table#t01 th	{
     color: white;
 }
 </style>
-
+<div class="scroll-table" style="height:72vh;">
 <h2> <%= @school.name %> </h2>
 <% if current_user %>
 
@@ -47,3 +47,4 @@ table#t01 th	{
 </table> 
 <script>generateMap('<%= @school.address %>')</script>
 <div id="googleMap"></div>
+</div>
