--- a/app/views/browse/_show.html.erb
+++ b/app/views/browse/_show.html.erb
@@ -2,7 +2,7 @@
 table {
     width:100%;
 }
-table, td {
+table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
@@ -10,13 +10,13 @@ th, td {
     padding: 5px;
     text-align: left;
 }
-table#t01 tr:nth-child(even) {
+table#surveyTable tr:nth-child(even) {
     background-color: #eee;
 }
-table#t01 tr:nth-child(odd) {
+table#surveyTable tr:nth-child(odd) {
    background-color:#fff;
 }
-table#t01 th	{
+table#surveyTable th	{
     background-color: black;
     color: white;
 }
@@ -35,9 +35,9 @@ table#t01 th	{
 	<span class="graph" style="padding: 0 0 0 <%= grade.average_mark %>px"> <%= grade.average_mark %> </span> <%= grade.subject %> <%= grade.grade %> <br/>
 <% end %>
 <br/><strong>Surveys:</strong> <br/> 
-<table id="t01">
+<table id="surveyTable">
 <tr>
-<td>Question</td><td>Total responses</td><td>many or all</td><td>at no time</td><td>few times</td><td>some times</td>
+<th>Question</th><th>Total responses</th><th>many or all</th><th>at no time</th><th>few times</th><th>some times</th>
 </tr>
 <% @school.surveys.each do |survey| %>
 	<tr>
