--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
 </head>
 
 <body ng-app="skoolr" class="container-fluid">
+
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=508633599295306";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <h1>Skoolr</h1>
 <span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Home", '/home' %> </span>
@@ -39,3 +49,4 @@
 </div>
 
 </body>
+<div class="fb-like" data-href="https://www.facebook.com/cpsc310skoolr" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
