--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
 <div ng-controller="HomeCtrl">
 	This is the home page. <br/>
-	{{test}}
+	<div id="googleMap"></div>
+<div class="fb-comments" data-href="https://www.facebook.com/cpsc310skoolr" data-numposts="5"></div>
+
+<a class="twitter-timeline" href="https://twitter.com/ubcskoolr" data-widget-id="669135160785301504">Tweets by @ubcskoolr</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 </div>
