--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -5,6 +5,33 @@ body {
 	background: linear-gradient(to right, #B2DEED, #D8EAF0);
 }
 
+table {
+    width:100%;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+
+table#surveyTable tr:nth-child(even) {
+    background-color: #eee;
+}
+
+table#surveyTable tr:nth-child(odd) {
+   background-color:#fff;
+}
+
+table#surveyTable th	{
+    background-color: black;
+    color: white;
+}
+
 div .boxed {
 	background-color: white;
 }
