--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -8,9 +8,6 @@
 	<%= f.radio_button :value, 3 %>
 	<%= f.radio_button :value, 4 %>
 	<%= f.radio_button :value, 5 %>
-    <%= f.label :Rating %><br>
-  </p>
-  <p>
-    <%= f.submit %>
+    <%= f.submit "Rate" %>
   </p>
 <% end %>
