Revert "Moved the rating form to a better place"
This reverts commit 9aebcc39e7bba8dfeb94fd86eb762e74b34f2bbd.

--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -8,6 +8,9 @@
 	<%= f.radio_button :value, 3 %>
 	<%= f.radio_button :value, 4 %>
 	<%= f.radio_button :value, 5 %>
-    <%= f.submit "Rate" %>
+    <%= f.label :Rating %><br>
+  </p>
+  <p>
+    <%= f.submit %>
   </p>
 <% end %>
