--- a/app/views/browse/_show.html.erb
+++ b/app/views/browse/_show.html.erb
@@ -3,19 +3,9 @@
 
 <% if current_user %>
       <%= link_to "favorite",   favorite_school_path(@school, type: "favorite"), method: :put %>
-      <%= link_to "unfavorite", favorite_school_path(@school, type: "unfavorite"), method: :put %><br>
-<% end %>
-
-<%= pluralize(@school.ratings.size, "user") %> 
-rated this school
-<% if @school.ratings.average(:value) != nil %>
-	<%= @school.ratings.average(:value) %>/5.0
-<% end %><br/>
-<% if user_signed_in? && !admin_signed_in?%>
-	<%= render "ratings/form" %>
-<% else %>
-	<br/>
-<% end %>
+      <%= link_to "unfavorite", favorite_school_path(@school, type: "unfavorite"), method: :put %>
+<% end %><br>
+<%= pluralize(@school.ratings.size, "user") %> rated this school <%= @school.ratings.average(:value) %>/5.0 <br/>
 
 <strong>Address:</strong> <br/> <%= @school.address %> <br/>
 <br/><strong>Grades (subject, grade, average mark):</strong> <br/> 
@@ -35,4 +25,7 @@ rated this school
 </table> 
 <script>generateMap('<%= @school.address %>')</script>
 <div id="googleMap"></div>
+<% if user_signed_in? && !admin_signed_in?%>
+	<%= render 'ratings/form' %>
+<% end %>
 </div>
