--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Home", '/home' %> </span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Get Started", '/search' %> </span>
 	<span class="boxed font-24 col-md-2 text-center"><%= link_to "Browse Schools", '/browse' %> </span>
-
+  <span class="boxed font-24 col-md-2 text-center"><%= link_to "Contact Us", '/socialmedia' %> </span>
   <% if user_signed_in? && !admin_signed_in? %>
       <span class="boxed font-24 col-md-2 text-center"><%= link_to "Profile", '/profile' %></span>
         <span class="boxed font-24 col-md-2 text-center">
