Fixed google map for search

--- a/app/views/search/_show.html.erb
+++ b/app/views/search/_show.html.erb
@@ -10,3 +10,4 @@
 <% end %>
 <%= @school.distance_to(params[:search]) %><br/>
 <script>generateMapWithPath('<%= @school.address %>')</script>
+<div id="googleMap"></div>
