--- a/app/views/search/_show.html.erb
+++ b/app/views/search/_show.html.erb
@@ -1,13 +1,20 @@
 <h2> <%= @school.name %> </h2>
 <strong>Address:</strong> <br/> <%= @school.address %> <br/>
-<br/><strong>Grades (subject, grade, average mark):</strong> <br/> 
+<br/><strong>Grades:</strong> <br/> 
 <% @school.grades.each do |grade| %>
-	<span class="graph" style="padding: 0 0 0 <%= grade.average_mark %>px"> <%= grade.average_mark %> </span> <%= grade.subject %> <%= grade.grade %> <br/>
+	<span class="graph" style="padding: 0 0 0 <%= grade.average_mark %>px"> <%= grade.average_mark %> </span> <%= grade.subject %> <br/>
 <% end %>
 <br/><strong>Surveys:</strong> <br/> 
+<table id="surveyTable">
+<tr>
+<th>Total responses</th><th>many or all</th><th>at no time</th><th>few times</th><th>some times</th>
+</tr>
 <% @school.surveys.each do |survey| %>
-	<%= survey.question %>
+	<tr>
+		<td><%= survey.many_or_all_responses + survey.at_no_time_responses + survey.few_times_responses + survey.some_times_responses%></td> <td><%= survey.many_or_all_responses %></td> <td><%= survey.at_no_time_responses %></td> <td><%= survey.few_times_responses %></td> <td><%= survey.some_times_responses %></td>
+	</tr>
 <% end %>
+</table> 
 <%= @school.distance_to(params[:search]) %><br/>
 <script>generateMapWithPath('<%= @school.address %>')</script>
 <div id="googleMap"></div>
