--- a/app/views/schools/index.erb
+++ b/app/views/schools/index.erb
@@ -1,8 +1,9 @@
 <h2>Manage Schools</h2>
 <div class="button-row">
-	<%= button_to "Update From Server", fetch_schools_path, class: "btn btn-primary" %>
-	<%= button_to "Add School", new_school_path, class: "btn btn-primary" %>
+	<%= button_to "Update schools from server", fetch_schools_path, class: "btn btn-primary" %>
+	<%= button_to "Add school manually", new_school_path, class: "btn btn-primary" %>
   <%= button_to "Add survey data", import_surveys_path, class: "btn btn-primary" %>
+  <%= button_to "Add grades data", import_grades_path, class: "btn btn-primary" %>
 </div><br/>
 <div class="media scroll-table height-70vh">
   <div class="media-body">
