--- a/app/views/search/_show.html.erb
+++ b/app/views/search/_show.html.erb
@@ -4,17 +4,17 @@
 <% @school.grades.each do |grade| %>
 	<span class="graph" style="padding: 0 0 0 <%= grade.average_mark %>px"> <%= grade.average_mark %> </span> <%= grade.subject %> <br/>
 <% end %>
-<br/><strong>Surveys:</strong> <br/> 
+<br/><strong>Surveys:</strong> <br/>
+<% if @school.survey != nil %>
 <table id="surveyTable">
 <tr>
 <th>Total responses</th><th>many or all</th><th>at no time</th><th>few times</th><th>some times</th>
 </tr>
-<% @school.surveys.each do |survey| %>
 	<tr>
-		<td><%= survey.many_or_all_responses + survey.at_no_time_responses + survey.few_times_responses + survey.some_times_responses%></td> <td><%= survey.many_or_all_responses %></td> <td><%= survey.at_no_time_responses %></td> <td><%= survey.few_times_responses %></td> <td><%= survey.some_times_responses %></td>
+		<td><%= @school.survey.many_or_all_responses + @school.survey.at_no_time_responses + @school.survey.few_times_responses + @school.survey.some_times_responses%></td> <td><%= @school.survey.many_or_all_responses %></td> <td><%= @school.survey.at_no_time_responses %></td> <td><%= @school.survey.few_times_responses %></td> <td><%= @school.survey.some_times_responses %></td>
 	</tr>
-<% end %>
 </table> 
+<% end %>
 <%= @school.distance_to(params[:search]) %><br/>
 <script>generateMapWithPath('<%= @school.address %>')</script>
 <div id="googleMap"></div>
