--- a/app/views/surveys/_form.erb
+++ b/app/views/surveys/_form.erb
@@ -1,4 +1,4 @@
-<%= form_for([@school, @school.surveys.build]) do |f| %>
+<%= form_for @school.survey, method: :patch do |f| %>
   <% if @survey && @survey.errors.any? %>
     <div id="error_explanation">
       <h2>
